--- a/requirements.txt
+++ b/requirements.txt
@@ -32,6 +32,7 @@ jupyter-client==7.1.2
 jupyter-core==4.9.1
 jupyterlab-pygments==0.1.2
 jupyterlab-widgets==1.0.2
+jupyterlab
 kiwisolver==1.3.2
 MarkupSafe==2.0.1
 matplotlib==3.5.1
